[1.8] update locale: uk-UA
http://code.google.com/p/fbug/source/detail?r=11396

--- a/extension/locale/uk-UA/firebug-tracing.properties
+++ b/extension/locale/uk-UA/firebug-tracing.properties
@@ -39,3 +39,55 @@ tracing.cmd.Force_Garbage_Collector=Прискорити збирач смітт
 tracing.cmd.tip.Force_Garbage_Collector=Прискорити збирач сміття
 tracing.cmd.Open_Profile_Directory=Відкрити теку профілю
 tracing.cmd.tip.Open_Profile_Directory=Відкрити теку профілю
+tracing.option.A11Y_Description=Проблеми доступності
+tracing.option.ACTIVATION_Description=Активація Firebug
+tracing.option.ACTIVITYOBSERVER_Description=Спостерігач активності Firebug
+tracing.option.ANNOTATIONS_Description=Аннотація веб-сайту Firebug
+tracing.option.BP_Description=Точки переривань
+tracing.option.CACHE_Description=Кеш джерела
+tracing.option.COMMANDLINE_Description=Командний рядок і Меню командного рядка
+tracing.option.COMPILATION_UNITS_Description=Виміри сценарію компіляції
+tracing.option.CONSOLE_Description=Панель консолі
+tracing.option.CSS_Description=Розбір CSS
+tracing.option.DISPATCH_Description=Диспетчеризація подій
+tracing.option.DOM_Description=DOM
+tracing.option.DOMPLATE_Description=Створення  domplate
+tracing.option.EDITOR_Description=Вбудований редактор та Автодоповнювач
+tracing.option.ERRORLOG_Description=Журнал помилок JS, CSS, XML тощо.
+tracing.option.ERRORS_Description=Внутрішні помилки Firebug
+tracing.option.EVAL_Description=Обчислення сценарію
+tracing.option.FBS_BP_Description=Точки переривання сервісу Firebug
+tracing.option.FBS_CREATION_Description=Створення точок переривання сервісу Firebug
+tracing.option.FBS_ERRORS_Description=Помилки  сервісу Firebug
+tracing.option.FBS_FINDDEBUGGER_Description=Знайти відлагоджувач сервісу Firebug
+tracing.option.FBS_FUNCTION_Description=Функція сервісу Firebug
+tracing.option.FBS_JSDCONTEXT_Description=Контекст відлагоджувача JavaScript сервісу Firebug
+tracing.option.FBS_SRCUNITS_Description=Джерело одиниць служби Firebug
+tracing.option.FBS_STEP_Description=Степпінг відлагоджувача JavaScript служби Firebug
+tracing.option.FBS_TRACKFILES_Description=Файли, за якими стежить сервіс Firebug
+tracing.option.FUNCTION_NAMES_Description=Назви функцій JavaScript
+tracing.option.HISTORY_Description=Історія переходів Firebug
+tracing.option.HTML_Description=HTML
+tracing.option.HTTPOBSERVER_Description=Спостерігач запитів HTTP
+tracing.option.INFOTIP_Description=Інформаційна підказка
+tracing.option.INITIALIZE_Description=Ініціалізація Firebug
+tracing.option.INSPECT_Description=Інспектор
+tracing.option.JSONVIEWER_Description=Переглядач JSON
+tracing.option.LINETABLE_Description=Таблиця рядків сценарію
+tracing.option.LOCALE_Description=Локалізація
+tracing.option.LOCATIONS_Description=Розміщення джерела
+tracing.option.NET_Description=Панель мережі
+tracing.option.NET_EVENTS_Description=Події мережі
+tracing.option.OPTIONS_Description=Уподобання Firebug
+tracing.option.PANELS_Description=Панелі
+tracing.option.SHORTCUTS_Description=Клавіатурні скорочення
+tracing.option.SOURCEFILES_Description=Джерельна файли JavaScript
+tracing.option.SPY_Description=Спостерігач XMLHTTPRequest
+tracing.option.STACK_Description=Стек викликів JavaScript
+tracing.option.STORAGE_Description=Сховище налаштувань
+tracing.option.SVGVIEWER_Description=Переглядач SVG
+tracing.option.TOOLTIP_Description=Підказка кнопки "Старт"
+tracing.option.TOPLEVEL_Description=JavaScript верхнього рівня
+tracing.option.UI_LOOP_Description=Інтерфейс відлагодження JavaScript
+tracing.option.WINDOWS_Description=Вікна Firebug та Вкладка переглядача
+tracing.option.XMLVIEWER_Description=Переглядач XML
