[1.9][&1.8] Locale update: bg
http://code.google.com/p/fbug/source/detail?r=11538

--- a/extension/locale/bg/firebug-tracing.properties
+++ b/extension/locale/bg/firebug-tracing.properties
@@ -1,11 +1,8 @@
 # LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):
-
 # Firebug tracing console menu items (located in Firebug's menu).
-
 Open_Firebug_Tracing=Отваряне на трасирането на Firebug
 Always_Open_Firebug_Tracing=Винаги да се отваря трасирането на Firebug
 # LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).
-
 title.Tracing=Трасиране
 tracing.Show_Scope_Variables=Променливи от обхвата
 tracing.Show_Time=Времена
@@ -42,3 +39,55 @@ tracing.cmd.Force_Garbage_Collector=Изчистване на паметта (GC
 tracing.cmd.tip.Force_Garbage_Collector=Изчистване на паметта (GC)
 tracing.cmd.Open_Profile_Directory=Отваряне на папката на профила
 tracing.cmd.tip.Open_Profile_Directory=Отваряне на папката на профила
+tracing.option.A11Y_Description=Проблеми с достъпността
+tracing.option.ACTIVATION_Description=Активация на Firebug
+tracing.option.ACTIVITYOBSERVER_Description=Наблюдател на Firebug активността
+tracing.option.ANNOTATIONS_Description=Firebug сайт анотация.
+tracing.option.BP_Description=Почивни точки.
+tracing.option.CACHE_Description=Кеш на сорса.
+tracing.option.COMMANDLINE_Description=Команден център & изскачащ прозорец на командния център
+tracing.option.COMPILATION_UNITS_Description=Секция за компилация на скриптове.
+tracing.option.CONSOLE_Description=Конзолен панел
+tracing.option.CSS_Description=CSS разбор
+tracing.option.DISPATCH_Description=Известяване на събития
+tracing.option.DOM_Description=DOM
+tracing.option.DOMPLATE_Description=Създаване на Domplate
+tracing.option.EDITOR_Description=Редови редактор & Autocompleter
+tracing.option.ERRORLOG_Description=Лог за грешки на JS, CSS, XML и др.
+tracing.option.ERRORS_Description=Вътрешни Firebug грешки
+tracing.option.EVAL_Description=Script оценка
+tracing.option.FBS_BP_Description=Почивни точки на Firebug услугата
+tracing.option.FBS_CREATION_Description=Firebug услуга за създаване на скриптове
+tracing.option.FBS_ERRORS_Description=Грешки на Firebug услугата
+tracing.option.FBS_FINDDEBUGGER_Description=Firebug услугата намира debbuger-и.
+tracing.option.FBS_FUNCTION_Description=Функцията на Firebug услугата.
+tracing.option.FBS_JSDCONTEXT_Description=JavaScript дебъгер на Firebug услугата.
+tracing.option.FBS_SRCUNITS_Description=Сорс единици на Firebug услугата
+tracing.option.FBS_STEP_Description=Firebug service JavaScript Debugger stepping
+tracing.option.FBS_TRACKFILES_Description=Проследени файлове на Firebug услугата
+tracing.option.FUNCTION_NAMES_Description=Имена на JavaScript функции
+tracing.option.HISTORY_Description=Firebug навигационна история
+tracing.option.HTML_Description=HTML
+tracing.option.HTTPOBSERVER_Description=HTTP request наблюдател
+tracing.option.INFOTIP_Description=Инфо съвет
+tracing.option.INITIALIZE_Description=Инициализация на Firebug
+tracing.option.INSPECT_Description=Инспектор
+tracing.option.JSONVIEWER_Description=JSON диаскоп
+tracing.option.LINETABLE_Description=Script line table
+tracing.option.LOCALE_Description=Локализация
+tracing.option.LOCATIONS_Description=Местоположения на сорс
+tracing.option.NET_Description=NET панел
+tracing.option.NET_EVENTS_Description=Мрежови събития
+tracing.option.OPTIONS_Description=Firebug предпочитания
+tracing.option.PANELS_Description=Панели
+tracing.option.SHORTCUTS_Description=Клавиатурни преки пътища
+tracing.option.SOURCEFILES_Description=JavaScript сорс файлове
+tracing.option.SPY_Description=XMLHttpRequests наблюдател
+tracing.option.STACK_Description=JavaScript call stack
+tracing.option.STORAGE_Description=Склад за настройки
+tracing.option.SVGVIEWER_Description=SVG диаскоп
+tracing.option.TOOLTIP_Description=Бутон за стартиране на ToolTip
+tracing.option.TOPLEVEL_Description=Най - високо ниво JavaScript
+tracing.option.UI_LOOP_Description=Юзер Интерфейс на JS дебъгването
+tracing.option.WINDOWS_Description=Firebug наблюдател на прозорци и табове
+tracing.option.XMLVIEWER_Description=XML диаскоп
