[1.9] Not translated strings
http://code.google.com/p/fbug/source/detail?r=11601

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -905,6 +905,9 @@ script.warning.debugger_active=Debugger is already active
 script.suggestion.debugger_active=The debugger is currently halted at a breakpoint on another page.
 script.button.Go_to_that_page=Go to that page
 
+script.warning.debugger_not_activated=Debugger not activated
+script.suggestion.debugger_not_activated=Debugger not activated
+
 #firebug.dtd
 firebug.Firebug=Firebug
 firebug.Close=Close
