--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -498,7 +498,7 @@ console.Break_On_This_Error=Break On This Error
 console.Use_TAB_and_arrow_keys=Use TAB and arrow keys
 
 # Console strings used when JavaScript is not available
-console.JSDisabledInFirefoxPrefs=JavaScript is disabled in your Firefox preferences. If you would like to use the Console panel then please enable this option under 'Tools' -> 'Options' -> 'Content' -> 'Enable JavaScript'
+console.JSDisabledInFirefoxPrefs=JavaScript is disabled in your Firefox preferences. If you want to use the Console panel, then please enable this option via 'Tools' > 'Options' > 'Content' > 'Enable JavaScript'
 
 # LOCALIZATION NOTE (commandline.disabledForXMLDocs): This message is displayed in the console
 # in cases when the current page is an XML document. The text between <a> and </a> is a link.
