--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -537,8 +537,8 @@ net.option.Show_Paint_Events=Show Paint Events
 # LOCALIZATION NOTE (net.option.Show_BF_Cache_Responses, net.option.tip.Show_BF_Cache_Responses):
 # Net panels's option. If set to true, the net panel displays also response coming from
 # BF (back-forward) cache. See also: https://developer.mozilla.org/En/Working_with_BFCache
-net.option.Show_BF_Cache_Responses=Show BF Cache Responses
-net.option.tip.Show_BF_Cache_Responses=The Net panel can show also responses coming from BF Cache.
+net.option.Show_BF_Cache_Responses=Show BFCache Responses
+net.option.tip.Show_BF_Cache_Responses=Also responses from Back-Forward Cache will be shown
 
 # LOCALIZATION NOTE (script.Break_On_Next, script.Disable_Break_On_Next):
 # Tooltip used for a "break-on" button on Firebug's toolbar. Used in context of Script panel
