--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -500,6 +500,12 @@ console.Use_TAB_and_arrow_keys=Use TAB and arrow keys
 # Console strings used when JavaScript is not available
 console.JSDisabledInFirefoxPrefs=JavaScript is disabled in your Firefox preferences. If you want to use the Console panel, then please enable this option via 'Tools' > 'Options' > 'Content' > 'Enable JavaScript'
 
+# LOCALIZATION NOTE (console.multiHighlightLimitExceeded)
+# Used by the console panel for arrays. If the user moves mouse over an array bracket
+# all elements in the array are highlighted on the page. If there is too much elements
+# in the array, this tooltip is displayed instead.
+console.multiHighlightLimitExceeded=There is too much elements in the array to highlight on the page (current limit is %S).\nSee 'extensions.firebug.multiHighlightLimit' preference.
+
 # LOCALIZATION NOTE (commandline.disabledForXMLDocs): This message is displayed in the console
 # in cases when the current page is an XML document. The text between <a> and </a> is a link.
 # that cause to switch into HTML rendering of the document.
