--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -396,7 +396,7 @@ plural.Limit_Exceeded2=Firebug's log limit has been reached. %1$S entry not show
 LimitPrefs=Preferences
 
 # LOCALIZATION NOTE (LimitPrefsTitle): A message displayed in the Net panel when log limit
-# has been reached. Informing the user what preferencee should be changed to modify the limit.
+# has been reached. Informing the user what preference should be changed to modify the limit.
 # %S Name of a preference.
 # examples: In order to change the limit modify: firebug.extensions.console.logLimit
 LimitPrefsTitle=In order to change the limit modify: %S
@@ -501,10 +501,10 @@ console.Use_TAB_and_arrow_keys=Use TAB and arrow keys
 console.JSDisabledInFirefoxPrefs=JavaScript is disabled in your Firefox preferences. If you want to use the Console panel, then please enable this option via 'Tools' > 'Options' > 'Content' > 'Enable JavaScript'
 
 # LOCALIZATION NOTE (console.multiHighlightLimitExceeded)
-# Used by the console panel for arrays. If the user moves mouse over an array bracket
-# all elements in the array are highlighted on the page. If there is too much elements
+# Used by the console panel for arrays. If the user moves the mouse over an array bracket,
+# all elements in the array are highlighted on the page. If there are too many elements
 # in the array, this tooltip is displayed instead.
-console.multiHighlightLimitExceeded=There is too much elements in the array to highlight on the page (current limit is %S).\nSee 'extensions.firebug.multiHighlightLimit' preference.
+console.multiHighlightLimitExceeded=There are too many elements in the array to highlight on the page (current limit is %S).\nSee 'extensions.firebug.multiHighlightLimit' preference.
 
 # LOCALIZATION NOTE (commandline.disabledForXMLDocs): This message is displayed in the console
 # in cases when the current page is an XML document. The text between <a> and </a> is a link.
