[1.9] Issue 4781: DOM panel displays bunch of null members
http://code.google.com/p/fbug/source/detail?r=11725

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -260,13 +260,16 @@ ScriptsFilterEventShort=events
 ScriptsFilterAllShort=all
 
 # LOCALIZATION NOTE (ShowUserProps, ShowUserFuncs, ShowDOMProps, ShowDOMFuncs, ShowDOMConstants,
-# ShowOwnProperties, ShowOwnPropertiesTooltip, ShowEnumerableProperties, ShowEnumerablePropertiesTooltip):
+# ShowOwnProperties, ShowOwnPropertiesTooltip, ShowEnumerableProperties, ShowEnumerablePropertiesTooltip,
+# ShowInlineEventHandlers):
 # Labels for DOM panel options (located in tab's min menu)
 ShowUserProps=Show User-defined Properties
 ShowUserFuncs=Show User-defined Functions
 ShowDOMProps=Show DOM Properties
 ShowDOMFuncs=Show DOM Functions
 ShowDOMConstants=Show DOM Constants
+ShowInlineEventHandlers=Show Inline Event Handlers
+ShowInlineEventHandlersTooltip=Show available inline event handlers that are not associated with a function.
 ShowOwnProperties=Show Own Properties Only
 ShowOwnPropertiesTooltip=Don't show prototype chain
 ShowEnumerableProperties=Show Enumerable Properties Only
