[1.9] Update strings (related to issue 4689)
http://code.google.com/p/fbug/source/detail?r=11748

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -384,6 +384,9 @@ svgviewer.tab.SVG=SVG
 jsonviewer.sort=Sort by key
 jsonviewer.do_not_sort=Do not sort
 
+# LOCALIZATION NOTE (net.jsonviewer.Copy_JSON): Label (verb) used in the net & console panel when copying JSON replies
+net.jsonviewer.Copy_JSON=Copy "%S" as JSON 
+
 # LOCALIZATION NOTE (RequestHeaders, ResponseHeaders): Label (noun) used in the Net panel
 # (expand an entry in the panel and select Headers tab).
 RequestHeaders=Request Headers
