[1.9] Localized confirmation message for editing the CSS source
http://code.google.com/p/fbug/source/detail?r=11751

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -855,6 +855,10 @@ a11y.updates.match_found_in_net_summary_row=match found for "%S" in net summary 
 a11y.updates.no_matches_found=no matches found for "%S"
 
 confirmation.Reset_All_Firebug_Options=Are you sure to reset all Firebug options to the default state?
+# LOCALIZATION NOTE (confirmation.Edit_CSS_Source):
+# If the user has changed the CSS and clicks on the Source Edit button, a confirmation dialog is
+# displayed containing the following message
+confirmation.Edit_CSS_Source=Your existing CSS edits will be discarded.\nAre you sure you want to edit the source?
 # Console messages.
 warning.Console_must_be_enabled=Console must be enabled
 warning.Command_line_blocked?=Command line blocked?
