[1.9] Issue 4683 (Font preview on mouseover) http://code.google.com/p/fbug/issues/detail?id=4683 (contribution by Tasoss)
http://code.google.com/p/fbug/source/detail?r=11760

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -176,6 +176,10 @@ InheritedFrom=Inherited from
 
 SothinkWarning=The Sothink SWF Catcher extension is preventing Firebug from working properly.<br><br>Please read <a href="http://www.getfirebug.com/faq.html#Sothink" target="_new">this item on the Firebug FAQ</a> for help.
 
+# LOCALIZATION NOTE (css.fontFamilyPreview): This description is displayed in the CSS panel
+# when the mouse is over a font name,in a font-family property
+css.fontFamilyPreview=The quick brown fox jumps over the lazy dog. 0123456789
+
 # LOCALIZATION NOTE (css.EmptyStyleSheet): This description is displayed in the CSS panel
 # in case there are no stylesheets attached to the current page.
 # The text between <a> and </a> is displayed as a link.
