--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -273,7 +273,7 @@ ShowDOMProps=Show DOM Properties
 ShowDOMFuncs=Show DOM Functions
 ShowDOMConstants=Show DOM Constants
 ShowInlineEventHandlers=Show Inline Event Handlers
-ShowInlineEventHandlersTooltip=Show available inline event handlers that are not associated with a function.
+ShowInlineEventHandlersTooltip=Show available inline event handlers, that are not associated with a function.
 ShowOwnProperties=Show Own Properties Only
 ShowOwnPropertiesTooltip=Don't show prototype chain
 ShowEnumerableProperties=Show Enumerable Properties Only
