--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -254,10 +254,10 @@ StepInto=Step Into
 StepOut=Step Out
 RunUntil=Run to This Line
 
-ScriptsFilterStatic=Show Static Scripts
-ScriptsFilterEval=Show Static and eval Scripts
-ScriptsFilterEvent=Show Static and event Scripts
-ScriptsFilterAll=Show Static, eval, and event Scripts
+ScriptsFilterStatic=Show static Scripts
+ScriptsFilterEval=Show static and eval Scripts
+ScriptsFilterEvent=Show static and event Scripts
+ScriptsFilterAll=Show static, eval and event Scripts
 ScriptsFilterStaticShort=static
 ScriptsFilterEvalShort=evals
 ScriptsFilterEventShort=events
