--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -584,6 +584,7 @@ CopyColor=Copy Color
 CopyImageLocation=Copy Image Location
 OpenImageInNewTab=Open Image in New Tab
 OmitObjectPathStack=Omit Toolbar Stack
+Load_Original_Source=Load Original Source
 Copy_Rule_Declaration=Copy Rule Declaration
 Copy_Style_Declaration=Copy Style Declaration
 
