[1.9] Removed unnecessary translations and fixed script.Disable_Break_On_Next
http://code.google.com/p/fbug/source/detail?r=11879

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -216,10 +216,6 @@ DeleteProp=Delete "%S"
 BreakOnThisError=Break on This Error
 BreakOnAllErrors=Break on All Errors
 
-#xxxHonza: remove as soon as backporting into 1.7 finishes
-#see script.Disable_Break_On_Next
-DisableBreakOnNext=Disable Break on Next
-
 ShowAllSourceFiles=Show chrome sources
 TrackThrowCatch=Track Throw/Catch
 UseLastLineForEvalName=Use Last Source Line for eval() names
@@ -246,13 +242,6 @@ ClearAllBreakpoints=Remove All Breakpoints
 # Disable: allows to disable the current 'debugger;' keyword used in the Javascript source.
 script.balloon.Continue=Continue
 script.balloon.Disable=Disable
-
-# Script panel, xxxHonza: should be removed as soon as backporting into 1.7 is finished.
-# See firebug.StepOver, etc.
-StepOver=Step Over
-StepInto=Step Into
-StepOut=Step Out
-RunUntil=Run to This Line
 
 ScriptsFilterStatic=Show static Scripts
 ScriptsFilterEval=Show static and eval Scripts
@@ -560,7 +549,7 @@ net.option.tip.Show_BFCache_Responses=Also responses from Back-Forward Cache wil
 # Tooltip used for a "break-on" button on Firebug's toolbar. Used in context of Script panel
 # (breakin on next executed Javascript statemen)
 script.Break_On_Next=Break On Next
-script.Disable_Break_On_Next=Break On Next
+script.Disable_Break_On_Next=Disable Break On Next
 
 ShowHttpHeaders=Show HTTP Headers
 
