[1.9] Issue 4845 (Rerun should have a shortcut like the other debugging options) http://code.google.com/p/fbug/issues/detail?id=4845
http://code.google.com/p/fbug/source/detail?r=11880

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -960,11 +960,11 @@ firebug.Search=Search
 # LOCALIZATION NOTE (firebug.Rerun, firebug.Continue, firebug.StepOver, firebug.StepInto,
 # firebug.StepOut, firebug.RunUntil)
 # Labels used for debugger 'stepping' buttons that are available in the Script panel.
-firebug.Rerun=Rerun
+firebug.Rerun=Rerun (Shift+F8)
 firebug.Continue=Continue (F8)
 firebug.StepOver=Step Over (F10)
 firebug.StepInto=Step Into (F11)
-firebug.StepOut=Step Out (shift F11)
+firebug.StepOut=Step Out (Shift+F11)
 firebug.RunUntil=Run to This Line
 
 firebug.BreakOnErrors=Break on Errors
