[1.9] Fix not localized strings (feedback from htanaka)
http://code.google.com/p/fbug/source/detail?r=11903

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -53,8 +53,9 @@ Minimize_Firebug=Minimize Firebug
 On_for_all_web_pages=On for All Web Pages
 firebug.menu.Clear_Activation_List=Clear Activation List
 
+# LOCALIZATION NOTE (firebug_options): Tooltip text used for Firebug icon menu (them left
+# most button on Firebug main toolbar)
 firebug_options=Firebug Options
-
 
 # LOCALIZATION NOTE (firebug.Show_All_Panels): Menu item label used in 'list of all panels'
 # menu (available on Firebug's tab bar).
@@ -234,6 +235,13 @@ LoggedFunctions=Logged Functions
 EnableAllBreakpoints=Enable All Breakpoints
 DisableAllBreakpoints=Disable All Breakpoints
 ClearAllBreakpoints=Remove All Breakpoints
+ConditionInput=This breakpoint will stop only if this expression is true:
+
+# LOCALIZATION NOTE (breakpoints.Remove_Breakpoint, breakpoints.Disable_Breakpoint,
+# breakpoints.Enable_Breakpoint): Labels used for context menu in the Breakpoints (side) panel.
+breakpoints.Remove_Breakpoint=Remove Breakpoint
+breakpoints.Disable_Breakpoint=Disable Breakpoint
+breakpoints.Enable_Breakpoint=Enable Breakpoint
 
 # LOCALIZATION NOTE (script.balloon.Continue, script.balloon.Disable): Labels used for buttons
 # within balloon popup dialog. This dialog appears when debugger halts at a breakpoint or at
@@ -251,6 +259,12 @@ ScriptsFilterStaticShort=static
 ScriptsFilterEvalShort=evals
 ScriptsFilterEventShort=events
 ScriptsFilterAllShort=all
+
+# LOCALIZATION NOTE (callstack.Expand_All, callstack.Collapse_All): Labels used in
+# Callstack (side) panel context menu (Firebug needs to be halted at a breakpoint
+# to see the items).
+callstack.Expand_All=Expand All
+callstack.Collapse_All=Collapse All
 
 # LOCALIZATION NOTE (ShowUserProps, ShowUserFuncs, ShowDOMProps, ShowDOMFuncs, ShowDOMConstants,
 # ShowOwnProperties, ShowOwnPropertiesTooltip, ShowEnumerableProperties, ShowEnumerablePropertiesTooltip,
@@ -284,7 +298,6 @@ EditVariable=Edit Variable...
 EditWatch=Edit Watch...
 DeleteProperty=Delete Property
 DeleteWatch=Delete Watch
-ConditionInput=This breakpoint will stop only if this expression is true:
 SetBreakpoint=Set Breakpoint
 DisableBreakpoint=Disable Breakpoint
 EditBreakpointCondition=Edit Breakpoint Condition...
@@ -295,6 +308,8 @@ Expand_Shorthand_Properties=Expand Shorthand Properties
 Sort_alphabetically=Sort alphabetically
 Show_Mozilla_specific_styles=Show Mozilla specific styles
 script.Type_any_key_to_filter_list=Type any key to filter list
+
+
 
 # LOCALIZATION NOTE (LayoutPadding, LayoutBorder, LayoutMargin, LayoutPosition, LayoutAdjacent):
 # Labels used to describe layout properties a the selected HTML element.
@@ -321,7 +336,7 @@ net.header.Reset_Header=Reset Header
 # net.header.Status_Tooltip, net.header.Domain, net.header.Domain_Tooltip,
 # net.header.Size, net.header.Size_Tooltip, net.header.Timeline, net.header.Timeline_Tooltip,
 # net.header.Local_IP, net.header.Local_IP_Tooltip, net.header.Remote_IP,
-# net.header.Remote_IP_Tooltip):
+# net.header.Remote_IP_Tooltip, net.header.Protocol, net.header.Protocol_Tooltip):
 # Labels and tooltips for a headers displayed on top of the Net panel.
 net.header.URL=URL
 net.header.URL_Tooltip=Requested URL and used HTTP method.
@@ -337,6 +352,8 @@ net.header.Local_IP=Local IP
 net.header.Local_IP_Tooltip=Local IP address and port number to which the request is bound.
 net.header.Remote_IP=Remote IP
 net.header.Remote_IP_Tooltip=Remote IP address and port number to which the request is bound.
+net.header.Protocol=Protocol
+net.header.Protocol_Tooltip=The URL protocol used to locate the resource on the Web.
 
 # LOCALIZATION NOTE (net.label.Network_Breakpoints): Label for network breakpoints group.
 net.label.XHR_Breakpoints=XHR Breakpoints
