[1.9] New string "Inspect Element with Firebug"
http://code.google.com/p/fbug/source/detail?r=12004

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1010,9 +1010,15 @@ firebug.StepInto=Step Into (F11)
 firebug.StepOut=Step Out (Shift+F11)
 firebug.RunUntil=Run to This Line
 
-firebug.BreakOnErrors=Break on Errors
+# LOCALIZATION NOTE (firebug.Inspect, firebug.InspectElement, firebug.InspectElementWithFirebug)
+# Labels for Firebug Inspector. Used by a button (available in Firefox Customize Toolbar dialog)
+# and also page context menu. As soon as built-in inspector is having its own "Inspect Element"
+# Firebug should start using "Inspect Element with Firebug" to distinguish itself.
 firebug.Inspect=Inspect
 firebug.InspectElement=Inspect Element
+firebug.InspectElementWithFirebug=Inspect Element with Firebug
+
+firebug.BreakOnErrors=Break on Errors
 firebug.InspectTooltip=Click an element in the page to inspect
 firebug.EditHTMLTooltip=Edit this HTML
 firebug.Profile=Profile
