[1.9] Issue 2225: Resending a XMLHttpRequest
http://code.google.com/p/fbug/source/detail?r=12019

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -553,6 +553,10 @@ net.label.Parameters=Parameters
 net.label.Parts=Parts
 net.label.Source=Source
 
+# LOCALIZATION NOTE (net.xpy.Resend): Label for context menu item. Used when clicking
+# on a HTTP request (in the Console or Net panel) to re-send it with the same arguments.
+net.label.Resend=Resend
+
 # LOCALIZATION NOTE (net.option.Disable_Browser_Cache, net.option.Show_Paint_Events):
 # Labels for Net panel's options (located in tab's option menu)
 net.option.Disable_Browser_Cache=Disable Browser Cache
