[1.9] Issue 4925: Disable Break On ... buttons when debugger is not activated
http://code.google.com/p/fbug/source/detail?r=12139

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1089,6 +1089,10 @@ firebug.breakpoint.doNotShowBreakNotification2=You can disable/enable break noti
 firebug.bon.cause.disableDebuggerKeyword2=Clicking the 'Disable' button overrides 'debugger' with a disabled breakpoint.
 firebug.bon.tooltip.disableDebuggerKeyword2=Creates a disabled breakpoint
 
+# LOCALIZATION NOTE (firebug.bon.scriptPanelNeeded): A label used by 'Break On Next' button
+# This feature needs the Script panel enabled in order to work.
+firebug.bon.scriptPanelNeeded=(the Script panel must be enabled to use this feature)
+
 # LOCALIZATION NOTE (firebug.dom.noChildren):
 # Message displayed in the DOM panel in cases, in which there are no children objects
 # and so nothing to display.
