--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -53,6 +53,13 @@ Minimize_Firebug=Minimize Firebug
 On_for_all_web_pages=On for All Web Pages
 firebug.menu.Clear_Activation_List=Clear Activation List
 
+top=Top
+bottom=Bottom
+left=Left
+right=Right
+firebug=Right
+firebug.Position of Firebug UI=Position of Firebug UI
+
 # LOCALIZATION NOTE (firebug_options): Tooltip text used for Firebug icon menu (them left
 # most button on Firebug main toolbar)
 firebug_options=Firebug Options
