[1.9] Locale update: el
http://code.google.com/p/fbug/source/detail?r=12164

--- a/extension/locale/el/firebug-tracing.properties
+++ b/extension/locale/el/firebug-tracing.properties
@@ -1,8 +1,8 @@
-# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):
-# Firebug tracing console menu items (located in Firebug's menu).
+# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):n
+# Firebug tracing console menu items (located in Firebug's menu).n
 Open_Firebug_Tracing=Άνοιγμα ανίχνευσης Firebug
 Always_Open_Firebug_Tracing=Πάντα άνοιγμα ανίχνευσης Firebug
-# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).
+# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).n
 title.Tracing=Ανίχνευση
 tracing.Show_Scope_Variables=Εμφάνιση εμβέλειας μεταβλητών
 tracing.Show_Time=Εμφάνιση ώρας
