[1.9] issue 3997. merge "Open Firebug in New Window" and "always open in new window"
http://code.google.com/p/fbug/source/detail?r=12178

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -57,8 +57,7 @@ top=Top
 bottom=Bottom
 left=Left
 right=Right
-firebug=Right
-firebug.Position of Firebug UI=Position of Firebug UI
+firebug.uiLocation=Firebug UI Location
 
 # LOCALIZATION NOTE (firebug_options): Tooltip text used for Firebug icon menu (them left
 # most button on Firebug main toolbar)
