[1.9] Issue 3071 (Display sample of WOFF file inside Net Panel) http://code.google.com/p/fbug/issues/detail?id=3071
http://code.google.com/p/fbug/source/detail?r=12209

--- a/extension/locale/en-US/firebug-tracing.properties
+++ b/extension/locale/en-US/firebug-tracing.properties
@@ -92,6 +92,7 @@ tracing.option.SPY_Description=XMLHttpRequests observer
 tracing.option.STACK_Description=JavaScript call stack
 tracing.option.STORAGE_Description=Settings storage
 tracing.option.SVGVIEWER_Description=SVG viewer
+tracing.option.FONTVIEWER_Description=Font viewer
 tracing.option.TOOLTIP_Description=Start Button tooltip
 tracing.option.TOPLEVEL_Description=Top level JavaScript
 tracing.option.UI_LOOP_Description=JavaScript debugging user interface
