--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -386,6 +386,24 @@ jsonviewer.tab.JSON=JSON
 xmlviewer.tab.XML=XML
 svgviewer.tab.SVG=SVG
 
+fontviewer.General_Info=General Info
+fontviewer.Meta_Data=Meta Data
+fontviewer.view_source=view source
+fontviewer.Preview=Preview
+fontviewer.view_characters=view characters
+fontviewer.pretty_print=pretty print
+fontviewer.view_sample=view sample
+fontviewer.uniqueid=Unique ID
+fontviewer.vendor=Vendor
+fontviewer.license=License
+fontviewer.description=Description
+fontviewer.copyright=Copyright
+fontviewer.credits=Credits
+fontviewer.trademark=Trademark
+fontviewer.licensee=Licensee
+fontviewer.extension=Extension
+fontviewer.pangram=The quick brown fox jumps over the lazy dog
+
 # LOCALIZATION NOTE (jsonviewer.sort, jsonviewer.do_not_sort): Label (verb) used in the
 # Net panel for JSON responses. Allows to sort alphabetically.
 jsonviewer.sort=Sort by key
