[1.9] Extend SourceLink to also support column index (related to 3042)
http://code.google.com/p/fbug/source/detail?r=12250

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -89,11 +89,13 @@ commandLineShowCompleterPopup=Show Completion List Popup
 
 Assertion=Assertion Failure
 
-# LOCALIZATION NOTE (Line): Used at many places in the UI. Displays the location of an error,
-# message, etc. within a source of a web page.
+# LOCALIZATION NOTE (Line, LineAndCol): Used at many places in the UI. Displays the location
+# of an error, message, etc. within a source of a web page.
 # first %S = File name, second %S = Line number
 # examples: somePage.htm (line 64)
+# examples: somePage.htm (line 64, column 53)
 Line=%S (line %S)
+LineAndCol=%S (line %S, col %S)
 
 InstanceLine=%S #%S (line %S)
 StackItem=%S (%S line %S)
