--- a/extension/locale/de/firebug-tracing.properties
+++ b/extension/locale/de/firebug-tracing.properties
@@ -86,6 +86,7 @@ tracing.option.SPY_Description=XMLHttpRequests Überwachung
 tracing.option.STACK_Description=JavaScript Call Stack
 tracing.option.STORAGE_Description=Einstellungsspeicher
 tracing.option.SVGVIEWER_Description=SVG Betrachter
+tracing.option.FONTS_Description=Schriftinformationen und Schriftanzeige
 tracing.option.TOOLTIP_Description=Start Button Kurzinfo
 tracing.option.TOPLEVEL_Description=Höchste Ebene in JavaScript
 tracing.option.UI_LOOP_Description=JavaScript Debugging Benutzerschnittstelle
