[1.9] Locale update: sl-SI
http://code.google.com/p/fbug/source/detail?r=12285

--- a/extension/locale/sl-SI/firebug-tracing.properties
+++ b/extension/locale/sl-SI/firebug-tracing.properties
@@ -86,6 +86,7 @@ tracing.option.SPY_Description=Opazovalnik XMLHttpRequest
 tracing.option.STACK_Description=JavaScript klic sklada
 tracing.option.STORAGE_Description=Skladišče nastavitev
 tracing.option.SVGVIEWER_Description=SVG oglednik
+tracing.option.FONTS_Description=Informacije o pisavah in pregledovalnik pisav
 tracing.option.TOOLTIP_Description=Namig za gumb Start
 tracing.option.TOPLEVEL_Description=Vrhnji JavaScript
 tracing.option.UI_LOOP_Description=Grafični vmesnik razhroščevalnika JavaScript
