[1.9] Locale update: el
http://code.google.com/p/fbug/source/detail?r=12295

--- a/extension/locale/el/firebug-tracing.properties
+++ b/extension/locale/el/firebug-tracing.properties
@@ -1,8 +1,8 @@
-# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):n
-# Firebug tracing console menu items (located in Firebug's menu).n
+# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):nn
+# Firebug tracing console menu items (located in Firebug's menu).nn
 Open_Firebug_Tracing=Άνοιγμα ανίχνευσης Firebug
 Always_Open_Firebug_Tracing=Πάντα άνοιγμα ανίχνευσης Firebug
-# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).n
+# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).nn
 title.Tracing=Ανίχνευση
 tracing.Show_Scope_Variables=Εμφάνιση εμβέλειας μεταβλητών
 tracing.Show_Time=Εμφάνιση ώρας
@@ -86,6 +86,7 @@ tracing.option.SPY_Description=Παρατηρητής XMLHttpRequests
 tracing.option.STACK_Description=Στοίβα κλήσης JavaScript
 tracing.option.STORAGE_Description=Αποθήκευση ρυθμίσεων
 tracing.option.SVGVIEWER_Description=Προβολή SVG
+tracing.option.FONTS_Description=Πληροφορίες και προβολή γραμματοσειρών
 tracing.option.TOOLTIP_Description=Συμβουλή κουμπιού εκκίνησης
 tracing.option.TOPLEVEL_Description=JavaScript κορυφαίου επιπέδου
 tracing.option.UI_LOOP_Description=Διασύνδεση χρήστη της αποσφαλμάτωσης JavaScript
