[1.9] Locale update: es-AR
http://code.google.com/p/fbug/source/detail?r=12299

--- a/extension/locale/es-AR/firebug-tracing.properties
+++ b/extension/locale/es-AR/firebug-tracing.properties
@@ -1,7 +1,7 @@
 # LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):
 # Firebug tracing console menu items (located in Firebug's menu).
 Open_Firebug_Tracing=Abrir rastreo de Firebug
-Always_Open_Firebug_Tracing=Siempre abrir rastreo de Firebug
+Always_Open_Firebug_Tracing=Siempre abrir el rastreo de Firebug
 # LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).
 title.Tracing=Rastreo
 tracing.Show_Scope_Variables=Mostrar variables del scope
@@ -34,7 +34,7 @@ tracing.cmd.Collapse_All=Colapsar todo
 tracing.cmd.Tools=Herramientas
 tracing.cmd.tip.Tools=Herramientas
 tracing.cmd.Clear_Browser_Cache=Limpiar caché del navegador
-tracing.cmd.tip.Clear_Browser_Cache=Limpiar caché del navegador
+tracing.cmd.tip.Clear_Browser_Cache=Limpiar la caché del navegador
 tracing.cmd.Force_Garbage_Collector=Forzar recolección de basura
 tracing.cmd.tip.Force_Garbage_Collector=Forzar recolección de basura
 tracing.cmd.Open_Profile_Directory=Abrir directorio de perfilado
@@ -86,8 +86,9 @@ tracing.option.SPY_Description=Observador de XMLHttpRequests
 tracing.option.STACK_Description=Pila de llamadas de JavaScript
 tracing.option.STORAGE_Description=Almacenamiento de opciones
 tracing.option.SVGVIEWER_Description=Visor SVG
+tracing.option.FONTS_Description=Información de fuentes y visor de fuentes
 tracing.option.TOOLTIP_Description=Tooltip del botón de inicio
 tracing.option.TOPLEVEL_Description=JavaScript de alto nivel
 tracing.option.UI_LOOP_Description=Interfaz de usuario de depuración de JavaScript
-tracing.option.WINDOWS_Description=Ventanas de Firebug y seguidor de pestañas
+tracing.option.WINDOWS_Description=Ventanas de Firebug y observador de pestañas
 tracing.option.XMLVIEWER_Description=Visor XML
