[1.9] Locale update: es
http://code.google.com/p/fbug/source/detail?r=12300

--- a/extension/locale/es/firebug-tracing.properties
+++ b/extension/locale/es/firebug-tracing.properties
@@ -49,10 +49,6 @@ tracing.option.COMMANDLINE_Description=Linea de comandos y linea de comandos eme
 tracing.option.COMPILATION_UNITS_Description=Unidades de compilación de script
 tracing.option.CONSOLE_Description=Panel de consola
 tracing.option.CSS_Description=Procesado CSS
-# LOCALIZATION NOTE (tracing.option.CSS_PARSER_Description): Not used, so no translation needed
-tracing.option.CSS_PARSER_Description=
-# LOCALIZATION NOTE (tracing.option.DBG2FIREBUG_Description): Not used, so no translation needed
-tracing.option.DBG2FIREBUG_Description=
 tracing.option.DISPATCH_Description=Enviado de eventos
 tracing.option.DOM_Description=DOM
 tracing.option.DOMPLATE_Description=Creación domplate
@@ -60,19 +56,15 @@ tracing.option.EDITOR_Description=Editor en línea y autocompletador
 tracing.option.ERRORLOG_Description=Trazad de error de JS, CSS, XML, etc.
 tracing.option.ERRORS_Description=Errores internos de Firebug
 tracing.option.EVAL_Description=Evaluación de script
-tracing.option.FBS_BP_Description=Firebug service breakpoints
-tracing.option.FBS_CREATION_Description=Firebug service script creation
-tracing.option.FBS_ERRORS_Description=Firebug service errors
-# LOCALIZATION NOTE (tracing.option.FBS_FF_START_Description): Not used, so no translation needed
-tracing.option.FBS_FF_START_Description=
-tracing.option.FBS_FINDDEBUGGER_Description=Firebug service find debugger
-# LOCALIZATION NOTE (tracing.option.FBS_FLUSH_Description): Not used, so no translation needed
-tracing.option.FBS_FLUSH_Description=
-tracing.option.FBS_FUNCTION_Description=Firebug service function
-tracing.option.FBS_JSDCONTEXT_Description=Firebug service JavaScript Debugger context
-tracing.option.FBS_SRCUNITS_Description=Firebug service source units
-tracing.option.FBS_STEP_Description=Firebug service JavaScript Debugger stepping
-tracing.option.FBS_TRACKFILES_Description=Firebug service tracked files
+tracing.option.FBS_BP_Description=Servicio de Firebug de puntos de ruptura
+tracing.option.FBS_CREATION_Description=Servicio de Firebug de creación de script
+tracing.option.FBS_ERRORS_Description=Servicio de Firebug de errores
+tracing.option.FBS_FINDDEBUGGER_Description=Servicio de Firebug de búsqueda de depurador
+tracing.option.FBS_FUNCTION_Description=Servicio de Firebug de función
+tracing.option.FBS_JSDCONTEXT_Description=Servicio de Firebug de depurador de contexto JavaScript
+tracing.option.FBS_SRCUNITS_Description=Servicio de Firebug de unidades fuente
+tracing.option.FBS_STEP_Description=Servicio de Firebug de depurador de paso JavaScript
+tracing.option.FBS_TRACKFILES_Description=Servicio de Firebug de archivos monitorizados
 tracing.option.FUNCTION_NAMES_Description=Nombres de función de JavaScript
 tracing.option.HISTORY_Description=Historial de navegación de firebug
 tracing.option.HTML_Description=HTML
@@ -81,11 +73,9 @@ tracing.option.INFOTIP_Description=Información
 tracing.option.INITIALIZE_Description=Inicialización de Firebug
 tracing.option.INSPECT_Description=Inspector
 tracing.option.JSONVIEWER_Description=Visor JSON
-tracing.option.LINETABLE_Description=Script line table
+tracing.option.LINETABLE_Description=Tabla de script
 tracing.option.LOCALE_Description=Localización
 tracing.option.LOCATIONS_Description=Localizaciones fuente
-# LOCALIZATION NOTE (tracing.option.MODULES_Description): Not used, so no translation needed
-tracing.option.MODULES_Description=
 tracing.option.NET_Description=Panel de red
 tracing.option.NET_EVENTS_Description=Eventos de red
 tracing.option.OPTIONS_Description=Preferencias de Firebug
@@ -96,6 +86,7 @@ tracing.option.SPY_Description=Observador XMLHttpRequest
 tracing.option.STACK_Description=Pila de llamadas JavaScript
 tracing.option.STORAGE_Description=Preferencias de almacenamiento
 tracing.option.SVGVIEWER_Description=Visor SVG
+tracing.option.FONTS_Description=Información y visor de fuente
 tracing.option.TOOLTIP_Description=Información botón inicio
 tracing.option.TOPLEVEL_Description=JavaScript nivel alto
 tracing.option.UI_LOOP_Description=Interfaz de usuario de depuración de JavaScript
