[1.9] Locale update: zh-CN
http://code.google.com/p/fbug/source/detail?r=12301

--- a/extension/locale/zh-CN/firebug-tracing.properties
+++ b/extension/locale/zh-CN/firebug-tracing.properties
@@ -86,6 +86,7 @@ tracing.option.SPY_Description=XHR 监视器
 tracing.option.STACK_Description=JavaScript 调用栈
 tracing.option.STORAGE_Description=设置存储
 tracing.option.SVGVIEWER_Description=SVG 查看器
+tracing.option.FONTS_Description=字体信息及字体查看器
 tracing.option.TOOLTIP_Description=开始按钮提示
 tracing.option.TOPLEVEL_Description=顶级 JavaScript
 tracing.option.UI_LOOP_Description=JavaScript 调试用户界面
